@startuml

title __CAR's Class Diagram__\n

  namespace com.company {
    namespace car {
      abstract class com.company.car.Car {
          # registerCode : String
          - REGEX : String
          - brand : String
          - wheels : int
          + getBrand()
          + getColor()
          + getEngine()
          + getRegisterCode()
          + getWheels()
          + print()
          + setColor()
          + setEngine()
          + setRegisterCode()
          # Car()
          # Car()
          # printDefault()
      }
    }
  }
  

  namespace com.company {
    namespace car {
      enum ColorsCar {
        Blue
        Green
        Pink
        Red
        White
        Yellow
      }
    }
  }
  

  com.company.car.Car o-- com.company.car.Car.ColorsCar : color
  com.company.car.Car o-- com.company.engine.Engine : engine
  com.company.car.Car +-down- com.company.car.Car.ColorsCar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
